Sync change datatype ID : String to int Logic Notify: AuctionDomain notify Realtime (Bidding), AuctionService handle BusinessEvent (Client click vào xem Auction -> send JOIN_AUCTION <AuctionID> -> add Observer (RealTime + BusinessEvent))